--- a/index.html
+++ b/index.html
@@ -1309,7 +1309,7 @@
         <h1>Welcome</h1>
     </header>
     <main>
-        <img src="https://via.placeholder.com/300" alt="Add descriptive text here">
+        <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=400" alt="Add descriptive text here">
     </main>
 </body>
 </html>`,
