--- a/index.html
+++ b/index.html
@@ -1390,7 +1390,7 @@
                                             value={code}
                                             onChange={(e) => handleCodeChange(e.target.value)}
                                             onKeyDown={handleKeyDown}
-                                            placeholder="<!-- Start typing your HTML/CSS code here... -->"
+                                            placeholder={t('ui.codePlaceholder')}
                                             aria-label="Code editor for typing HTML and CSS"
                                             aria-describedby="code-editor-description"
                                         />
